# assistente_cobranca_whatsapp

./: pyproject.toml
src/assistente_cobranca_whatsapp/: contatos.csv  contatos.py  csv_repo.py  delay.py  main.py  mensagens.py  whatsapp.py
